--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,6 @@ PLEX_TRANSCODING_PATH=
 PLEX_VERSION=                   # latest, public or beta
 PLEX_CLAIM=                     # Get one from https://www.plex.tv/claim/
 
-# TRAEFIK CONFIGS
+# CLOUDFLARE CONFIGS
 CLOUDFLARE_EMAIL=
 CLOUDFLARE_API_KEY=
