Add Calibre Web service

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ PLEX_TRANSCODING_PATH=
 PLEX_VERSION=                   # latest, public or beta
 PLEX_CLAIM=                     # Get one from https://www.plex.tv/claim/
 
+# CALIBRE CONFIG
+KINDLEGEN_BIN=                  # Kindlegen binary path for mobi conversion, for example: /usr/bin/kindlegen
+
 # CLOUDFLARE CONFIGS
 CLOUDFLARE_EMAIL=
 CLOUDFLARE_API_KEY=
