Add Ubooquity service

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ CONFIG_PATH=                    # For example: /home/user/.config/docker
 DOWNLOADS_PATH=                 # /mnt/disk1/downloads
 LOCAL_MEDIA_PATH=               # /mnt/disk1/media
 REMOTE_MEDIA_PATH=              # /mnt/plexdrive/media
+EMPTY_PATH=                     # Path for unused docker volumes, for example: /tmp/empty
 
 # PLEX CONFIG
 PLEX_TRANSCODING_PATH=
