--- a/docker-compose.downloads.yml
+++ b/docker-compose.downloads.yml
@@ -21,6 +21,33 @@ x-traefik-auth-labels: &traefik-auth-labels
   traefik.frontend.auth.basic: ${HTTP_AUTH}
 
 services:
+  amule:
+    container_name: amule
+    image: tchabaud/amule
+    restart: unless-stopped
+    ports:
+      - "4711:4711"
+      - "4712:4712"
+      - "4662:4662"
+      - "4665:4665/udp"
+      - "4672:4672/udp"
+    environment:
+      PUID: ${PUID}
+      PGID: ${PGID}
+      TZ: ${TIMEZONE}
+    volumes:
+      - ${CONFIG_PATH}/amule/config:/home/amule/.aMule
+      - ${CONFIG_PATH}/amule/webserver:/usr/share/amule/webserver
+      - ${DOWNLOADS_PATH}/amule/complete:/incoming
+      - ${DOWNLOADS_PATH}/amule/incomplete:/temp
+    networks:
+      - traefik
+    labels:
+      <<: *traefik-auth-labels
+      traefik.backend: amule
+      traefik.frontend.rule: "Host:amule.${SERVER_DOMAIN}"
+      traefik.port: 4711
+
   transmission:
     container_name: transmission
     image: linuxserver/transmission
